Noteworthy changes in version 0.9.17
-------------------------------------------------

 * OCSP nonces are now checked to detact replay attacks.


Noteworthy changes in version 0.9.16 (2006-08-01)
-------------------------------------------------

 * Fixed a character set conversion bug in BMPStrings.

 * New function for better error reporting of DNs.

 * Interface changes relative to the 0.9.13 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_dn_teststr                NEW
 ksba_dn_str2der                NEW
 ksba_dn_der2str                NEW


Noteworthy changes in version 0.9.15 (2006-06-20)
-------------------------------------------------

 * Fixed BER parser which was broken in the last release.


Noteworthy changes in version 0.9.14 (2006-05-16)
-------------------------------------------------

 * Fixed broken OCSP requests.

 * Ignore invalid bytes appended to a certificate.


Noteworthy changes in version 0.9.13 (2005-11-24)
-------------------------------------------------

 * New functions to associate user data with a certificate object.

 * Interface changes relative to the 0.9.12 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_cert_set_user_data        NEW
 ksba_cert_get_user_data        NEW


Noteworthy changes in version 0.9.12 (2005-08-01)
-------------------------------------------------

 * GeneralNames types dNSName and Uri are now supported. 

 * Minor changes to some function declarations.  This should not
   affect any compilation.

 * Interface changes relative to the 0.9.7 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ksba_certreq_add_extension     CHANGED: Argument DER is now a void*.
 ksba_cms_set_content_enc_algo  CHANGED: Argument IV is now void*.
 ksba_cms_get_content_enc_iv    CHANGED: Argument IV is now void*.
 ksba_cms_set_message_digest    CHANGED: Argument DIGEST is now
                                         unsigned char*.

